- Add Minecraft-like flavor text - Fix spinner behavior on mobile - Add metro-specific selector - Add SS/IAM toggle - Add additional links - Alphabetically sort links

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -45,3 +45,10 @@
   font-weight: 700;
   font-style: italic;
 }
+
+@font-face {
+  font-family: "Minecraft";
+  src: url("./Minecraft.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
